--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "lucide-react": "^0.483.0",
     "mapbox-gl": "^3.10.0",
     "maplibre-gl": "^5.3.0",
-    "next": "15.2.3",
+    "next": "^15.5.4",
     "ol": "^10.5.0",
     "ol-layerswitcher": "^4.1.2",
     "papaparse": "^5.5.3",
