--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "reconnecting-websocket": "^4.4.0",
