--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.6.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroui/react": "^2.7.6",
+    "@react-pdf/renderer": "^4.3.1",
     "@turf/turf": "^7.2.0",
     "antd": "^5.24.4",
     "chart.js": "^4.4.8",
