--- a/backend/docker/dockerfile.backend
+++ b/backend/docker/dockerfile.backend
@@ -1,19 +1,14 @@
 # Use Ubuntu as base image
 FROM ubuntu:22.04
 
-# Prevent interactive prompts during package installation
 ENV DEBIAN_FRONTEND=noninteractive
-
-# Set Python environment variables for better behavior
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/home/app
 
-# # Add UbuntuGIS PPA to get GDAL 3.8
-# RUN apt-get update && apt-get install -y software-properties-common && \
-#     add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-
-# Install dependencies for building Python
+# ----------------------------------------------------
+# Install base dependencies (Python build + GDAL + Chrome deps)
+# ----------------------------------------------------
 RUN apt-get update && apt-get install -y \
     wget \
     build-essential \
@@ -32,11 +27,36 @@ RUN apt-get update && apt-get install -y \
     binutils \
     libproj-dev \
     curl \
-    libpq-dev \ 
+    libpq-dev \
     gcc \
+    fonts-liberation \
+    libappindicator3-1 \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libgdk-pixbuf2.0-0 \
+    libnspr4 \
+    libnss3 \
+    libxss1 \
+    libxcomposite1 \
+    libxrandr2 \
+    xdg-utils \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
 
-# Download and install Python 3.12.9
+# ----------------------------------------------------
+# Install Google Chrome (stable)
+# ----------------------------------------------------
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list' && \
+    apt-get update && apt-get install -y google-chrome-stable && \
+    rm -rf /var/lib/apt/lists/*
+
+# ----------------------------------------------------
+# Install Python 3.12.9 manually
+# ----------------------------------------------------
 RUN wget https://www.python.org/ftp/python/3.12.9/Python-3.12.9.tgz && \
     tar -xf Python-3.12.9.tgz && \
     cd Python-3.12.9 && \
@@ -54,33 +74,41 @@ RUN ln -sf /usr/local/bin/python3.12 /usr/bin/python && \
 # Verify Python installation
 RUN python --version
 
-# Set the working directory in the container
+# ----------------------------------------------------
+# Set working directory and GDAL env vars
+# ----------------------------------------------------
 WORKDIR /home/app
 
-# Set GDAL environment variables
 ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
 ENV C_INCLUDE_PATH=/usr/include/gdal
 
-# Make sure GDAL Python package matches system GDAL version
 RUN GDAL_VERSION=$(gdal-config --version) && \
     pip install --upgrade pip && \
     pip install GDAL==${GDAL_VERSION}
 
-# Create non-root user for security
+# ----------------------------------------------------
+# Create non-root user
+# ----------------------------------------------------
 RUN useradd -m -s /bin/bash appuser
 
-# Copy requirements first to leverage Docker cache
+# ----------------------------------------------------
+# Copy requirements and install
+# ----------------------------------------------------
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# Copy the project files to the container
+# ----------------------------------------------------
+# Copy project files
+# ----------------------------------------------------
 COPY . .
-
-# Set correct ownership
 RUN chown -R appuser:appuser /home/app
 
+# ----------------------------------------------------
 # Switch to non-root user
+# ----------------------------------------------------
 USER appuser
 
-# Expose the port FastAPI will run on
+# ----------------------------------------------------
+# Expose app port
+# ----------------------------------------------------
 EXPOSE 9000
