fast_m backend well api done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,12 +58,12 @@ services:
       dockerfile: Dockerfile
     image: fast_m:latest
     ports:
-      - "7100:7100"
+      - "6500:6500"
     env_file:
       - .fastmdb.env
     volumes:
       - ./fast_m:/home/app:z
-    command: uvicorn main:app --host 0.0.0.0 --port 7100 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 6500 --reload
     restart: always
     depends_on:
       - fast_m_db
