--- a/fast_m/requirements.txt
+++ b/fast_m/requirements.txt
@@ -1,50 +1,79 @@
+# --- FastAPI Core ---
 fastapi
 uvicorn[standard]
-sqlalchemy
-pydantic
-psycopg2-binary
-uvicorn[standard]
 python-multipart
-python-jose
+python-jose[cryptography]
+pyjwt[crypto]
 python-dotenv
-alembic
-fiona
-gunicorn
-lxml
-rasterstats
-flower
 python-decouple
+pydantic
 pydantic-settings
 requests
 fastapi-pagination
-geopandas
-tqdm
-rasterio
-matplotlib
-uvicorn[standard]
-psycopg2-binary
-alembic
 bcrypt
 passlib[bcrypt]
-python-jose[cryptography]
-python-dotenv
-pydantic[email]
-pydantic_settings
-python-multipart
-python-decouple
-pyjwt[crypto]
-pyjwt
-redis[hiredis]
-aiosmtplib
 pyotp
-datashader
-reportlab
-celery 
-redis
+aiosmtplib
 websockets
-scipy
-jenkspy
-cartopy
+
+# --- Database & ORM ---
+SQLAlchemy==2.0.38
+alembic==1.15.1
+psycopg2-binary==2.9.10
+GeoAlchemy2==0.17.1
+
+# --- Celery & Background Tasks ---
+celery
 celery-progress
+flower
+redis[hiredis]
 
+# --- Geo & Raster Analysis ---
+geopandas==1.0.1
+fiona
+shapely==2.0.7
+rasterio==1.4.3
+rasterstats
+pyogrio==0.10.0
+pyproj==3.7.0
+affine==2.4.0
+cartopy
+contextily
+datashader
+matplotlib==3.10.0
+matplotlib_scalebar
+tqdm
+jenkspy
+scipy==1.15.1
+scikit-learn==1.6.1
+statsmodels>=0.13.0
+seaborn
+pymannkendall
+scikit-image
+opencv-python
+pykrige
 
+# --- Utilities & Reporting ---
+reportlab
+gunicorn
+bs4
+lxml
+selenium==4.25.0
+
+# --- Developer Tools ---
+black==25.1.0
+flake8==7.1.1
+pytest==8.3.4
+pytest-cov==6.0.0
+mypy==1.15.0
+factory_boy==3.3.3
+Faker==35.2.0
+coverage==7.6.11
+ipython==8.32.0
+ipdb==0.13.13
+
+# --- Core Dependencies ---
+numpy==2.2.2
+pandas==2.2.3
+setuptools==75.8.0
+wheel==0.45.1
