--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "leaflet-easyprint": "^2.1.9",
     "leaflet-geometryutil": "^0.10.3",
     "leaflet.bigimage": "^1.0.1",
+    "leaflet.fullscreen": "^4.0.0",
     "leaflet.locatecontrol": "^0.84.1",
     "lightgallery": "^2.9.0-beta.1",
     "loadsh": "^0.0.4",
