--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,8 @@
     "ol": "^10.5.0",
     "ol-layerswitcher": "^4.1.2",
     "papaparse": "^5.5.3",
+    "plotly.js-basic-dist": "^3.3.0",
+    "plotly.js-dist-min": "^3.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -63,6 +65,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
@@ -78,8 +81,10 @@
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-plotly.js": "^2.6.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
