--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "ol": "^10.5.0",
     "ol-layerswitcher": "^4.1.2",
     "papaparse": "^5.5.3",
+    "plotly.js": "^3.3.0",
     "plotly.js-basic-dist": "^3.3.0",
     "plotly.js-dist-min": "^3.3.0",
     "postcss": "^8.5.3",
