--- a/fast_m/app/core/.env_alembic
+++ b/fast_m/app/core/.env_alembic
@@ -1,3 +1,4 @@
+#fast_m/alembic/env.py
 from logging.config import fileConfig
 
 from sqlalchemy import engine_from_config
@@ -6,6 +7,7 @@ from sqlalchemy import pool
 from alembic import context
 from app.core.database import Base
 from app.models import * 
+
 # this is the Alembic Config object, which provides
 # access to the values within the .ini file in use.
 config = context.config
