--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,7 @@ django-environ==0.12.0
 django-extensions==3.2.3
 django-leaflet==0.31.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt
 ecdsa==0.19.1
 executing==2.2.0
 factory_boy==3.3.3
